--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,8 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = []
+dependencies = [
+    "atlassian-python-api>=4.0.4",
+    "dotenv>=0.9.9",
+    "markdownify>=1.1.0",
+]
