--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "apscheduler>=3.11.0",
     "atlassian-python-api>=4.0.4",
     "dotenv>=0.9.9",
     "markdownify>=1.1.0",
